--- a/css/about.css
+++ b/css/about.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    height: 120vh;
+    height: 100vh;
     background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)), url("../img/courses/background.jpg");
     background-repeat: no-repeat;
     background-size: cover;
@@ -57,57 +57,30 @@ nav ul li a:hover {
     color: white;
     margin: 30px 30px;
 }
-#desc {
-    color: white;
-}
 
-#form {
-     display: flex;
-     justify-content: center;
-     align-items: center;
-     flex-direction: column;
-}
-
-#form * {
-    margin: 10px 0px;
-}
-
-#form input {
-    background: none;
-    border: 2px solid white;
-    padding: 10px 40px;
-    width: 30%;
-    border-radius: 20px;
-    color: white;
-    font-size: 18px;
-}
-
-#form textarea {
-    color: white;
-    font-size: 18px;
-    border-radius: 20px;
-    background: none;
-    border: 2px solid white;
-    padding: 10px 40px;
-    width: 403px;
-    height: 256px;
-}
-
-#sendBtn  {
-    background: none;
-    color: white;
-    border: 2px solid white;
-    padding: 10px 30px;
-    width: 37%;
-    border-radius: 20px;
-    font-size: 18px;
-    transition: 0.3s ease all;
+.imgAbout {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%;
     cursor: pointer;
+    transition: 0.5s ease all;
 }
 
-#sendBtn:hover {
-    color: black;
-    background: white;
+.imgAbout:hover {
+    transform: scale(1.1);
+}
+
+.infoName {
+    margin: 10px 10px;
+}
+
+#about {
+    text-align: center;
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-gap: 200px;
+    margin: 10px 100px;
+    color: white;
 }
 
 footer {
